corrected ext-align to text-align  on line 44.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,5 +41,5 @@ main img {
 footer {
     margin-top: 15px;
     border-top: 1px solid #bc7c1b;
-    ext-align: center;
+    text-align: center;
 } 
